--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.2.3",
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
+    "@types/node": "^18.14.6",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "18.0.11",
+    "date-fns": "^2.29.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-timer-hook": "^3.0.5",
+    "typescript": "^4.9.5",
+    "zustand": "^4.3.5"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "add": "^2.0.6",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "yarn": "^1.22.19"
   }
 }
